# don-bosco-connect

./: .dockerignore  .env.example  .env.production  .gitignore  404.html  AGENT_PROMPT_DON_BOSCO.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_ROADMAP.md  GOLIVE_CHECKLIST.md  GUIDE_UTILISATION.md  INTEGRATION.md  Makefile  PRESENTATION.md  README.ar.md  README.fr.md  README.md  RUNBOOK.md  UPGRADE_README.md  USER_GUIDE.md  demo.html  demo_backend.py  docker-compose.dev.yml  docker-compose.ghcr.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  index.html  install.sh  landing.html  presentation_administration.docx  screenshots.sh  setup.sh  start_and_capture.sh  start_demo.sh  sync-to-drive.sh  take-screenshots.sh  test-project.sh  web-simulation.html
backend/: .dockerignore  .gitignore  Dockerfile  Procfile  alembic.ini  env.example  locustfile.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/ai/: admin.py  models.py  services.py  urls.py  views.py
backend/ai/migrations/: 0001_initial.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_make_absence_student_id_nullable.py  0003_announcements.py  42a0cbf69db6_revert_grades_to_numeric_for_exact_.py  44c6e4431407_revert_json_columns_back_to_jsonb_for_.py  4f8f3a2e1b0c_restore_email_unique.py  9e79d9136ce7_revert_grades_to_numeric_for_exact_.py  ea22d27c40c6_sync_models_with_current_schema.py  (+1 more)
backend/app/: config.py  database.py  main.py  minio_client.py  redis_client.py
backend/app/api/: deps.py
backend/assignments/: admin.py  models.py  serializers.py  urls.py  views.py
backend/courses/: admin.py  models.py  serializers.py  urls.py  views.py
backend/donbosco_connect/: __init__.py  settings.py  urls.py  wsgi.py
backend/scripts/: create_admin.py  init_db.py
demo/: index.html  (+5 more)
(+342 files in other folders)
