[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "donbosco-connect"
version = "2.2.0"
description = "Don Bosco Connect - Plateforme éducative"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["UP017"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D"]
"app/workers/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["app"]
omit = ["app/migrations/*", "tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
